# funutil

./: pyproject.toml  pyproject2.toml
.github/workflows/: sync.yml
src/funutil/cache/: core.py
src/funutil/path/: core.py
src/funutil/util/: __init__.py  path.py
