[project]
name = "funutil"
version = "1.0.51"
description = "funutil"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "cachebox>=4.3.0", "cachetools>=4.2.4", "diskcache>=5.6.3", "loguru>=0.7.2",]
[[project.authors]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.authors]]
name = "farfarfun"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/funutil"
Releases = "https://github.com/farfarfun/funutil/releases"

[tool.setuptools]
license-files = []
