[project]
name = "funutil"
version = "1.0.61"
description = "funutil"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "funlog-tau>=1.0.1",]
[[project.authors]]
name = "niuliangtao"
email = "farfarfun@qq.com"

[[project.maintainers]]
name = "牛哥"
email = "niuliangtao@qq.com"

[[project.maintainers]]
name = "farfarfun"
email = "farfarfun@qq.com"

[project.urls]
Organization = "https://github.com/farfarfun"
Repository = "https://github.com/farfarfun/funutil"
Releases = "https://github.com/farfarfun/funutil/releases"

[tool.setuptools]
license-files = []
